Fixes scrollbar layout jank
All browsers but safari

--- a/site/src/styles/_site_layout.scss
+++ b/site/src/styles/_site_layout.scss
@@ -1,3 +1,7 @@
+html {
+  scrollbar-gutter: stable;
+}
+
 #sidenav {
   position: fixed;
   top: 6rem;
